# tonic-gRPC-web-minimal

./: Dockerfile  README.md  docker-compose.yaml  envoy.yaml
client/: Makefile  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/proto_client/: package-lock.json  package.json
proto/: echo.proto
server/: Cargo.toml
server/src/: main.rs
