[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tonic = "0.12.3"
tonic-web = "0.12.3"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "cors",
  "compression-full",
  "fs",
] }

[build-dependencies]
tonic-build = "0.12.3"
